src/mongo/db/query/query_tester/tests/selfTests/negativeTests/compare_tests/diff_queries_same_res.results
diff_queries_same_res
diff_queries_same_res
test.coll as fuzzer_coll

0
:sortResults {aggregate: "fuzzer_coll", pipeline: [{$match: {_id: 0}}], cursor: {}}
[
{"_id":0,"value":"a"}
]

1
:sortResults {aggregate: "fuzzer_coll", pipeline: [{$match: {_id: {$lt: 2}}}], cursor: {}}
[
{"_id":0,"value":"a"},
{"_id":1,"value":"b"}
]
